--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,9 @@ stellar:
       - 0.0.0.0:2379 
   syncer: 0.0.0.0:4222
   stopic: collector
+  instrument:
+    address: 0.0.0.0:4222
+    stopic: collector
+    collect: 15s
+    location: logs/
+
